--- a/ws/Cargo.toml
+++ b/ws/Cargo.toml
@@ -14,9 +14,9 @@ futures = "0.3"
 jsonrpc-core = { version = "18.0.0", path = "../core" }
 jsonrpc-server-utils = { version = "18.0.0", path = "../server-utils" }
 log = "0.4"
-parking_lot = "0.11.0"
+parking_lot = "0.12"
 slab = "0.4"
-parity-ws = "0.11.1"
+ws = { git = "https://github.com/housleyjk/ws-rs.git" }
 
 [badges]
 travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
